force-app/main/default/objects/custom_create192__c/custom_create192__c.object-meta.xml
<CustomObject>
    <label>Custom created object192</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects192</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>