force-app/main/default/objects/custom_create192__c/fields/custom_create_192field601__c.field-meta.xml
<CustomField>
    <fullName>custom_create_192field601__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 192field601</label>
    <type>Checkbox</type>
</CustomField>